--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         input{
             margin-left:3rem;
             line-height: 2rem;
+            border-radius: 0.2rem;
         }
         #birth{
             margin-left: 4rem;
